--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 					<!-- Footer -->
 						<footer id="footer">
 							<section>
-								<form method="post" action="#">
+								<form method="post" action="https://formspree.io/opey@opacious.com">
 									<div class="fields">
 										<div class="field">
 											<label for="name">Name</label>
@@ -81,11 +81,11 @@
 								</section>
 								<section>
 									<h3>Phone</h3>
-									<p><a href="#">(305) 902-7697</a></p>
+									<p><a href="tel:3059027697">(305) 902-7697</a></p>
 								</section>
 								<section>
 									<h3>Email</h3>
-									<p><a href="#">opey@opacious.com</a></p>
+									<p><a href="mailto:opey@opacious.com">opey@opacious.com</a></p>
 								</section>
 								<section>
 									<h3>Social</h3>
