--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 					<!-- Footer -->
 						<footer id="footer">
 							<section>
-								<form method="post" action="https://formspree.io/opey@opacious.com">
+								<form method="post" action="https://formspree.io/hivemindla@gmail.com">
 									<div class="fields">
 										<div class="field">
 											<label for="name">Name</label>
