--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 					<nav id="nav">
 						<ul class="links">
 							<li class="active"><a href="index.html">Home</a></li>
-							<li><a href="podcast.html">Podcast</a></li>
+							<li><a href="mygear.html">My Gear</a></li>
 						</ul>
 						<ul class="icons">
 							<li><a href="https://twitter.com/opacious" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
