--- a/mygear.html
+++ b/mygear.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>All Things Opey</title>
+		<title>Generic Page - Massively by HTML5 UP</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -15,30 +15,21 @@
 	<body class="is-preload">
 
 		<!-- Wrapper -->
-			<div id="wrapper" class="fade-in">
-
-				<!-- Intro -->
-					<div id="intro">
-						<h1>All things<br />
-						Opey</h1>
-						<p>networker, deejay, hardworker, music fanatic<br />
-						highly opinionated</p>
-						<ul class="actions">
-							<li><a href="#header" class="button icon solo fa-arrow-down scrolly">Continue</a></li>
-						</ul>
-					</div>
+			<div id="wrapper">
 
 				<!-- Header -->
-					<header id="header">
-						<a href="index.html" class="logo">opacious</a>
-					</header>
+				<br />
+				<br />
+				<br />
+				<header id="header">
+					<a href="index.html" class="logo"> <img src="images/opey-opacious-logo.png" alt="Girl in a jacket" width="200" height="171"> </a>
+				</header>
 
 				<!-- Nav -->
 					<nav id="nav">
 						<ul class="links">
-							<li class="active"><a href="index.html">This is Opey</a></li>
-							<li><a href="starting-a-podcast-fullstory.html">Starting A Podcast</a></li>
-							<li><a href="elements.html">Elements Reference</a></li>
+							<li><a href="index.html">This is Opey</a></li>
+							<li class="active"><a href="mygear.html">My Gear</a></li>
 						</ul>
 						<ul class="icons">
 							<li><a href="https://twitter.com/opacious" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
@@ -49,30 +40,16 @@
 						</ul>
 					</nav>
 
+
 				<!-- Main -->
 					<div id="main">
 
-						<!-- Featured Post -->
-							<article class="post featured">
-								<header class="major">
-									<span class="date">June 1, 2018</span>
-									<h2><a href="#">starting<br />
-									a podcast</a></h2>
-									<p>Discussion is an exchange of knowledge;<br />
-									and argument an exchange of ignorance.<br />
-									Let Freedom Ring.</p>
-								</header>
-								<a href="#" class="image main"><img src="images/opey-podcast-chea.jpg" alt="" /></a>
-								<ul class="actions special">
-									<li><a href="starting-a-podcast-fullstory.html" class="button large">Full Story</a></li>
-								</ul>
-							</article>
-							<header class="major">
-								<span class="date">My Rig</span>
-								<h2>
-								Audio Equipment</h2>
-							</header>
-						<!-- Posts -->
+						<!-- Post -->
+						<header class="major">
+							<span class="date">My Rig</span>
+							<h2>
+							Audio Equipment</h2>
+						</header>
 							<section class="posts">
 								<article>
 									<header>
@@ -459,20 +436,6 @@
 					</ul>
 				</article>
 			</section>
-						<!-- Footer -->
-							<footer>
-								<div class="pagination">
-									<!--<a href="#" class="previous">Prev</a>-->
-									<a href="#" class="page active">1</a>
-									<a href="#" class="page">2</a>
-									<a href="#" class="page">3</a>
-									<span class="extra">&hellip;</span>
-									<a href="#" class="page">8</a>
-									<a href="#" class="page">9</a>
-									<a href="#" class="page">10</a>
-									<a href="#" class="next">Next</a>
-								</div>
-							</footer>
 
 					</div>
 
@@ -527,7 +490,7 @@
 
 				<!-- Copyright -->
 					<div id="copyright">
-						<ul><li>&copy; opacious</li><li>Design: <a href="https://html5up.net">HTML5 UP</a></li></ul>
+						<ul><li>&copy; Untitled</li><li>Design: <a href="https://html5up.net">HTML5 UP</a></li></ul>
 					</div>
 
 			</div>
